--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -55,34 +55,13 @@ hr{
 select {
   position: relative;
   background: #fff;
-  padding: 5px 100px 5px 25px;
+  padding: 5px;
   font-size: 16px;
+  min-width: 300px;
   line-height: 1;
   border: 1px solid #999;
-  border-right: none;
   border-radius: 0;
   height: 40px;
-  -webkit-appearance:none;
-  -moz-appearance:none;
-  appearance:none;
-}
-.select-label{
-  position: relative;
-}
-.select-label:after{
-  content: '< >';
-  color:#aaa;
-  -webkit-transform:rotate(90deg);
-  -moz-transform:rotate(90deg);
-  -ms-transform:rotate(90deg);
-  transform:rotate(90deg);
-  right: 0; 
-  top: 19px;
-  width: 40px;
-  text-align: center;
-  border-top:1px solid #999;
-  position:absolute;
-  pointer-events:none;
 }
 #local{
   float: right;
@@ -107,7 +86,8 @@ nav ul li.active:after{
   background-color: #64dd17;
 }
 input[type=date]{
-  padding: 0 5px;
+  padding: 8px 5px;
+  line-height: 1;
 }
 label{
   float: left;
@@ -137,10 +117,10 @@ thead{
   color: #fad53e;
   border: 1px solid #424242;
 }
-th{ 
+/*th{ 
   padding: 5px 10px;
   border-right: 1px solid #000;
-}
+}*/
 th:last-child{
   border: none;
 }
@@ -165,11 +145,10 @@ td{
   width: 100%;
 }
 #rateOfReturnGraph{
-  background: url('../images/chart.jpg') red;
+  background: url('../images/chart.jpg') no-repeat;
   position: absolute;
-  width: 407px;
+  width: 100%;
   height: 377px;
   right: 0;
-  top: 50%;
-  -webkit-transform: translateY(-60%);
+  top: 0;
 }
