--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -174,6 +174,9 @@ form[name=rateofReturnDateRange]{
   margin: 0;
   width: 100%;
 }
+#profileForm .radio-group {
+  padding-top: 15px;
+}
 #profileForm .radio-group label {
   position: relative;
   text-align: center;
@@ -203,6 +206,9 @@ form[name=rateofReturnDateRange]{
   left: 30px;
   bottom: 5px;
 }
+.gender .inputWrapper{
+  margin-left: 20px;
+}
 #profileForm .gender label{
   width: 60px;
   margin-right: 15px;
@@ -220,6 +226,11 @@ form[name=rateofReturnDateRange]{
   background: #F5F5F5;
   margin-bottom: 10px;
 }
+.face-on svg {
+  fill: #039BE5;
+  background-color: transparent;
+  margin: -3px 0 0 -2px;
+}
 input[type=radio]{
   position: absolute;
   right: 0;
@@ -235,10 +246,10 @@ input[type=radio]{
 }
 input[type="radio"] + .face-on{ /*the span element that immediately follow the radio button */
   visibility: hidden; /*temporarily hide the "YES" label*/
-  background: blue;
+  background: #F5F5F5;
 }
 input[type="radio"] + .face-on:after{
-  content: "X";
+  content: "";
 }
 input[type="radio"]:checked + .face-on{
   visibility: visible; /*show the "YES" label only if the radio button is checked*/
