Added form submit and reset

--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -112,13 +112,23 @@ label{
   position: absolute;
   margin-left: -10px;
 }
-.date-submit{
+button[type=submit], input[type=submit]{
   font-size: 0;
+  text-transform: uppercase;
   width: 120px; 
   height:37px; 
   border: none;
   margin: 2px 20px;
   background: url('../images/submit.png') -15px -7px no-repeat;
+}
+button[type=reset], input[type=reset]{
+  font-family: 'Roboto-bold', helvetica, sans-serif;
+  text-transform: uppercase;
+  width: 120px; 
+  height:37px; 
+  border: 1px solid #AAA;
+  border-radius: 2px;
+  margin: 2px 20px;
 }
 .table{
   width: 100%;
@@ -188,6 +198,10 @@ form[name=rateofReturnDateRange]{
 #profileForm input{
   width: 100%;
   margin: 5px auto;
+}
+#profileForm .form-controls button{
+  float: right;
+  margin-right: 15px;
 }
 .radiolabel{
   display: block;
