--- a/resources/css/glyphicons.less
+++ b/resources/css/glyphicons.less
@@ -7,7 +7,7 @@
 //
 // <a href="#"><span class="glyphicon glyphicon-star"></span> Star</a>
 
-@icon-font-path:          "resources/fonts/";
+@icon-font-path:          "../fonts/";
 @icon-font-name:          "glyphicons-regular";
 
 // Import the fonts
